deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-demo
  namespace: camilo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: camikiller/test:latest
          ports:
            - containerPort: 80
