service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: NodePort
  selector:
    app: ui 
  ports:
    - nodePort: 31479
      port: 8080
      targetPort: 80
